# mapnik-vector-tile-input

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: FindMapnik.cmake  FindProtozero.cmake
debian/: changelog  control  copyright  gbp.conf  rules
debian/patches/: 0001-Add-missing-header.patch  plugin-not-executable.patch  series
debian/source/: options
debian/upstream/: metadata
src/: CMakeLists.txt  mbtiles_vector_datasource.cpp  mbtiles_vector_datasource.hpp  mbtiles_vector_featureset.cpp  mbtiles_vector_featureset.hpp  mvt_io.cpp  mvt_io.hpp  mvt_message.hpp  vector_tile_compression.cpp  vector_tile_compression.hpp  vector_tile_compression.ipp  vector_tile_geometry_decoder.cpp  vector_tile_geometry_decoder.hpp  vector_tile_geometry_decoder.ipp  vector_tile_projection.hpp
